syntax = "proto3";
package pb;
// import  "google/protobuf/timestamp.proto";
import "user.proto";
option go_package = "github.com/doctor12th/simple_bank_new/pb";

message CreateUserRequest {
    string username = 1;
    string full_name = 2;
    string email = 3;
    string password = 4;
}

message CreateUserResponse {
    User user = 1;
}

