syntax = "proto3";
package pb;


import "rpc_create_user.proto";
import "rpc_login_user.proto";
option go_package = "github.com/doctor12th/simple_bank_new/pb";

service SimpleBankNew {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
    rpc LoginUser (LoginUserRequest) returns (LoginUserResponse) {}
}